@@ -9,3 +9,7 @@ AC_DEFINE(QT_NO_ASCII_CAST, 1, [Define if you don't want QString casted to char 
 dnl Check for librapi
 PKG_CHECK_MODULES(LIBRAPI, librapi2 >= 0.10.0)
 
+AC_ARG_ENABLE(update-mime-database,
+        AC_HELP_STRING([--disable-update-mime-database],
+        [do not run the update-mime-database utility (mostly useful for package maintainers) ]))
+AM_CONDITIONAL(UPDATE_MIME_DATABASE, test "$enable_update_mime_database" != "no")
